--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -1,10 +1,51 @@
 .header {
     background-color: rgb(19, 0, 65);
     width: 100%;
+    height: 50px;
     display: flex;
-    justify-content: center;
-    padding: 10px;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0;
+    box-shadow:  0 1px 2px 0 rgba(60,64,67,.5), 0 2px 6px 2px rgba(60,64,67,.3);
+    border-bottom: 3px solid rgb(166, 111, 255);
 }
 .headerTitle {
     color: rgb(255, 255, 255);
+    margin: 0 5px;
+    /* background-color: rgba(255, 255, 255, .15); */
+    width: 140px;
+    text-align: center;
+    border-radius: 3px;
+}
+.navBar {
+    display: flex;
+    align-items: center;
+    height: 90%;
+}
+.navItem {
+    background-color: rgba(255, 255, 255, .15);
+    height: 90%;
+    width: 100px;
+    margin: 0 4px 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3px;
+}
+.itemText {
+    text-decoration: none;
+    font-size: 20px;
+    color: white;
+    padding: 0;
+    border: none;
+    background: none;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    line-height: 38px;
+}
+.itemText:hover {
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, .2);
 }
