--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -11,13 +11,14 @@
     justify-content: center;
 }
 .pageItem {
-    width: 200px;
+    width: 300px;
     margin: 30px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     box-shadow: 0 1px 2px 0 rgba(60,64,67,.30), 0 2px 6px 2px rgba(60,64,67,.15);
     border-radius: 8px;
+    font-size: 22px;
 }
 .title {
     text-align: center;
@@ -42,4 +43,6 @@ input {
     width: 100%;
     margin: 0 auto;
     margin-bottom: 10px;
+    border: 1px solid black;
+    border-radius: 3px;
 }
