--- a/src/components/events/showEvent/showEvent.css
+++ b/src/components/events/showEvent/showEvent.css
@@ -1,5 +1,23 @@
+.ShowPageContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+    margin: 30px 0;
+}
 .ShowEventContainer {
     width: 100%;
     display: flex;
     justify-content: center;
+}
+.CardMainItem {
+    width: 500px;
+    margin: 30px 0 0 0;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    box-shadow: 0 1px 2px 0 rgba(60,64,67,.30), 0 2px 6px 2px rgba(60,64,67,.15);
+    border-radius: 8px;
 }
