--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -5,24 +5,28 @@
     font-weight: 400;
     box-sizing: border-box;
 }
+
 .pageContent {
     width: 100%;
     display: flex;
     justify-content: center;
 }
+
 .pageItem {
     width: 300px;
     margin: 30px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 0 1px 2px 0 rgba(60,64,67,.30), 0 2px 6px 2px rgba(60,64,67,.15);
+    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .30), 0 2px 6px 2px rgba(60, 64, 67, .15);
     border-radius: 8px;
     font-size: 22px;
 }
+
 .title {
     text-align: center;
 }
+
 .or {
     height: 200px;
     width: 10%;
@@ -32,6 +36,7 @@
     align-items: center;
     margin: 30px 0;
 }
+
 .loginForm {
     width: 90%;
     height: 100%;
@@ -39,6 +44,7 @@
     flex-direction: column;
     justify-content: space-between;
 }
+
 input {
     width: 100%;
     margin: 0 auto;
