--- a/src/components/entries/addEntry.css
+++ b/src/components/entries/addEntry.css
@@ -1,16 +1,35 @@
 .newEntry {
     margin: 50px auto;
     width: 600px;
+    background-color: whitesmoke;
 }
 
 .newEntry input {
     height: 30px;
 }
 
+.newEntry textarea {
+    width: 100%;
+    height: 300px;
+    resize: none;
+}
+
+
+/* ENTRY CARD */
 
 .entryCard {
     min-height: 205px;
     padding: 10px;
+    justify-content: space-between;
+    width: 600px;
+    margin: 30px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .30), 0 2px 6px 2px rgba(60, 64, 67, .15);
+    border-radius: 8px;
+    font-size: 22px;
+    animation: fadeIn 2s ease forwards;
 }
 
 .cardTitle {
@@ -25,4 +44,11 @@
 .cardContent {
     align-self: stretch;
     margin: 15px;
+}
+
+.entryCard>footer {
+    display: flex;
+    justify-content: space-between;
+    background-color: red;
+    width: 100%;
 }
