--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -6,9 +6,10 @@
     align-items: center;
     justify-content: space-between;
     padding: 0;
-    box-shadow:  0 1px 2px 0 rgba(60,64,67,.5), 0 2px 6px 2px rgba(60,64,67,.3);
+    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .5), 0 2px 6px 2px rgba(60, 64, 67, .3);
     border-bottom: 3px solid rgb(166, 111, 255);
 }
+
 .headerTitle {
     color: rgb(255, 255, 255);
     margin: 0 5px;
@@ -17,11 +18,13 @@
     text-align: center;
     border-radius: 3px;
 }
+
 .navBar {
     display: flex;
     align-items: center;
     height: 90%;
 }
+
 .navItem {
     background-color: rgba(255, 255, 255, .15);
     height: 90%;
@@ -32,6 +35,7 @@
     justify-content: center;
     border-radius: 3px;
 }
+
 .itemText {
     text-decoration: none;
     font-size: 20px;
@@ -44,6 +48,7 @@
     text-align: center;
     line-height: 38px;
 }
+
 .itemText:hover {
     color: rgb(0, 0, 0);
     cursor: pointer;
