--- a/src/components/entries/addEntry.css
+++ b/src/components/entries/addEntry.css
@@ -10,7 +10,7 @@
 
 .newEntry textarea {
     width: 100%;
-    height: 300px;
+    height: 150px;
     resize: none;
 }
 
@@ -44,11 +44,37 @@
 .cardContent {
     align-self: stretch;
     margin: 15px;
+    resize: none;
+    min-height: 200px;
+}
+
+.editField {
+    outline-color: purple;
+    padding: 5px;
+}
+
+.readOnly {
+    background-color: whitesmoke;
+    border: none;
+    outline: none;
 }
 
 .entryCard>footer {
     display: flex;
     justify-content: space-between;
-    background-color: red;
     width: 100%;
+    padding: 3px 10px;
+}
+
+.darkImg {
+    background-color: black;
+    padding: 4px;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    color: whitesmoke;
+    font-size: 16px;
+    border: none;
+    font-weight: 700;
+    border-radius: 3px;
 }
