--- a/src/components/entries/addEntry.css
+++ b/src/components/entries/addEntry.css
@@ -37,7 +37,9 @@
     align-self: flex-start;
     text-transform: capitalize;
     width: 100%;
+    height: 45px;
     padding: 5px;
+    border: none;
     border-bottom: solid 2px black;
 }
 
@@ -70,8 +72,8 @@
     background-color: black;
     padding: 4px;
     cursor: pointer;
-    width: 30px;
-    height: 30px;
+    width: 38px;
+    height: 38px;
     color: whitesmoke;
     font-size: 16px;
     border: none;
