--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -1,20 +1,50 @@
 .dashboardBody {
-    background-image: none;
+    height: 100vh;
+    width: 100%;
+    background-image: url('../../images//stripesBackground4.jpg');
+    background-size: cover;
+    background-position: right;
+}
+.dbFlex {
     display: flex;
     justify-content: center;
 }
 .dbUserInfo {
-    width: 200px;
-    border: 1px solid black;
+    width: 20%;
+    height: fit-content;
+    min-width: 200px;
+    padding: 10px;
     margin: 20px 5px;
+    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .3), 0 2px 6px 2px rgba(60, 64, 67, .15);
+    border-radius: 3px;
+    background-color: rgba(255, 255, 255, .8);
 }
 .dbEntries {
-    width: 300px;
+    width: 40%;
+    min-width: 300px;
+    height: fit-content;
+    padding: 10px;
     margin: 20px 5px;
-    border: 1px solid black;
+    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .3), 0 2px 6px 2px rgba(60, 64, 67, .15);
+    border-radius: 3px;
+    background-color: rgba(255, 255, 255, .8);
 }
 .dbEvents {
-    width: 300px;
+    width: 30%;
+    min-width: 250px;
+    height: fit-content;
+    padding: 10px;
     margin: 20px 5px;
-    border: 1px solid black;
+    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .3), 0 2px 6px 2px rgba(60, 64, 67, .15);
+    border-radius: 3px;
+    background-color: rgba(255, 255, 255, .8);
+}
+.dbEntryItem {
+    margin: 10px;
+    height: 27px;
+    overflow: hidden;
+    transition: all .3s;
+}
+.dbEntryItem:hover {
+    height: 100px;
 }
