--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+* {
+    font-family: 'Varela Round', sans-serif;
+}
 .header {
     background-color: rgb(19, 0, 65);
     width: 100%;
@@ -28,7 +32,7 @@
 .navItem {
     background-color: rgba(255, 255, 255, .15);
     height: 90%;
-    width: 100px;
+    width: 95px;
     margin: 0 4px 0 0;
     display: flex;
     align-items: center;
@@ -38,7 +42,7 @@
 
 .itemText {
     text-decoration: none;
-    font-size: 20px;
+    font-size: 16px;
     color: white;
     padding: 0;
     border: none;
