--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,7 +1,6 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Gill Sans';
     font-weight: 400;
     box-sizing: border-box;
 }
@@ -11,6 +10,7 @@
     background-position: right;
     height: 100vh;
     min-width: 700px;
+    overflow: hidden;
 }
 .pageContent {
     width: 100%;
@@ -20,22 +20,23 @@
 }
 
 .pageItem {
-    width: 300px;
-    background-color: rgba(255, 255, 255, .7);
+    width: 30%;
+    min-width: 300px;
+    background-color: rgba(255, 255, 255, .8);
     margin: 30px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .30), 0 2px 6px 2px rgba(60, 64, 67, .15);
     border-radius: 8px;
-    font-size: 22px;
+    font-size: 30px;
 }
 
 .title {
     text-align: center;
 }
 .orTitle {
-    background-color: rgba(255, 255, 255, .7);
+    background-color: rgba(255, 255, 255, .8);
     height: 40px;
     line-height: 40px;
     width: 50px;
@@ -61,7 +62,9 @@
 
 input {
     width: 100%;
-    height: 20px;
+    height: 30px;
+    font-size: 20px;
+    padding: 0 5px;
     margin: 0 auto;
     margin-bottom: 10px;
     border: 1px solid rgb(200, 200, 200);
