added a font and some more styling to dashboard

--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -1,9 +1,9 @@
 .dashboardBody {
     height: 100vh;
     width: 100%;
-    background-image: url('../../images//stripesBackground4.jpg');
+    background-image: url('../../images/stripesBackground4.jpg');
     background-size: cover;
-    background-position: right;
+    background-position: bottom right;
 }
 .dbFlex {
     display: flex;
