--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
 * {
     font-family: 'Varela Round', sans-serif;
 }
+
 .header {
     background-color: rgb(19, 0, 65);
     width: 100%;
@@ -12,6 +14,10 @@
     padding: 0;
     box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .5), 0 2px 6px 2px rgba(60, 64, 67, .3);
     border-bottom: 3px solid rgb(166, 111, 255);
+    /* if you dont want fixed bar get rid of this 3 last */
+    position: fixed;
+    top: 0;
+    z-index: 1;
 }
 
 .headerTitle {
