--- a/src/components/skillWidget/skillsWidget.css
+++ b/src/components/skillWidget/skillsWidget.css
@@ -11,6 +11,7 @@
     width: 50%;
     margin: 2px;
     height: 20px;
+    font-size: 12px;
 }
 
 header {
@@ -29,7 +30,9 @@ header {
     background-color: white;
     width: 100%;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
+    align-items: flex-start;
     min-height: 180px;
     border-radius: 5px;
     margin: 0 0 10px 0;
@@ -37,23 +40,25 @@ header {
 
 .skill-tag {
     background-color: rgba(186, 0, 255, 0.2);
-    width: 70%;
-    margin: 3px auto;
-    font-size: 13px;
+    min-width: 80px;
+    margin: 3px;
+    font-size: 12px;
     border-radius: 12px;
     padding: 5px 12px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 30px;
 }
 
 .deleteTag {
     background-color: whitesmoke;
     color: grey;
     border-radius: 50%;
-    padding: 2px 7px;
+    padding: 2px 4px 2px 4px;
+    margin: 0 0 0 10px;
     border: none;
-    font-size: 17px;
+    font-size: 12px;
     cursor: pointer;
 }
 
