--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -1,3 +1,6 @@
+::-webkit-scrollbar {
+    width: 0px;
+}
 .dashboardBody {
     height: 100vh;
     width: 100%;
@@ -23,11 +26,13 @@
     width: 40%;
     min-width: 300px;
     height: fit-content;
+    max-height: calc(100vh - 230px);
     padding: 10px;
     margin: 20px 5px;
     box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .3), 0 2px 6px 2px rgba(60, 64, 67, .15);
     border-radius: 3px;
     background-color: rgba(255, 255, 255, .8);
+    overflow: auto;
 }
 .dbEvents {
     width: 30%;
@@ -41,10 +46,7 @@
 }
 .dbEntryItem {
     margin: 10px;
-    height: 27px;
+    height: fit-content;
     overflow: hidden;
     transition: all .3s;
-}
-.dbEntryItem:hover {
-    height: 100px;
 }
