--- a/src/components/canvas/canvas.css
+++ b/src/components/canvas/canvas.css
@@ -4,4 +4,33 @@ canvas {
     display: block;
     margin: 10px auto;
     background-color: rgb(222, 222, 228);
+    max-width: 100%;
+}
+canvas:hover {
+    cursor: crosshair;
+}
+.canvasSettings {
+    box-shadow:  0 1px 2px 0 rgba(60,64,67,.30), 0 2px 6px 2px rgba(60,64,67,.20);
+    border-radius: 3px;
+    margin: 70px 20px 30px 20px;
+    padding: 5px 20px;
+    font-size: 20px;
+}
+input[type=color] {
+    width: 100px;
+    height: 30px;
+    margin: 0;
+}
+.flexSettings {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.flexSettingsItem {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.settingsItem {
+    margin: 0 auto;
 }
