--- a/src/components/events/showEvent/showEvent.css
+++ b/src/components/events/showEvent/showEvent.css
@@ -21,3 +21,12 @@
     box-shadow: 0 1px 2px 0 rgba(60,64,67,.30), 0 2px 6px 2px rgba(60,64,67,.15);
     border-radius: 8px;
 }
+.btn-WillAttend {
+    background: rgb(77, 55, 133); 
+    color: white;
+    border-radius: 8px;
+    width: 150px;
+    height: 30px;
+    cursor: pointer;
+    font-size: 1.2em;
+}
