--- a/src/components/canvas/canvas.css
+++ b/src/components/canvas/canvas.css
@@ -1,9 +1,16 @@
+/* .canvasWrapper {
+    background-image: url('../../images/stripesBackground4.jpg');
+    background-size: cover;
+    background-position: bottom right;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+} */
 canvas {
     border-radius: 3px;
     box-shadow:  0 1px 2px 0 rgba(60,64,67,.30), 0 2px 6px 2px rgba(60,64,67,.20);
     display: block;
     margin: 10px auto;
-    background-color: rgb(222, 222, 228);
+    background-color: rgba(222, 222, 228, .9);
     max-width: 100%;
 }
 canvas:hover {
@@ -12,6 +19,7 @@ canvas:hover {
 .canvasSettings {
     display: flex;
     justify-content: space-evenly;
+    background-color: white;
     box-shadow:  0 1px 2px 0 rgba(60,64,67,.30), 0 2px 6px 2px rgba(60,64,67,.20);
     border-radius: 3px;
     margin: 70px 20px 30px 20px;
