--- a/src/components/events/showEvent/showEvent.css
+++ b/src/components/events/showEvent/showEvent.css
@@ -4,15 +4,19 @@
     flex-direction: column; 
     justify-content: center;
     align-items: center;
-    margin: 30px 0;
+    margin: 70px 0;
+    /* background: yellow; */
+    padding-bottom: 400px;
 }
-.ShowEventContainer {
+/* .ShowEventContainer {
     width: 100%;
     display: flex;
     justify-content: center;
-}
+    background: red;
+} */
 .CardMainItem {
-    width: 500px;
+    width: 800px;
+    /* height: 800px; */
     margin: 30px 0 0 0;
     padding: 20px;
     display: flex;
@@ -20,6 +24,21 @@
     align-items: left;
     box-shadow: 0 1px 2px 0 rgba(60,64,67,.30), 0 2px 6px 2px rgba(60,64,67,.15);
     border-radius: 8px;
+}
+.CardItemTitle {
+    margin: 5px 180px;
+    padding-bottom: 10px;
+    text-align: center;
+    border-bottom: 1px solid rgb(180, 180, 180);
+}
+.CardItemEvent {
+    padding-bottom: 10px;
+    margin: 10px 20px;
+    border-bottom: 1px solid rgb(180, 180, 180);
+}
+.CardItemEventHost {
+    padding-bottom: 10px;
+    margin: 10px 20px;
 }
 .btn-WillAttend {
     background: rgb(77, 55, 133); 
@@ -29,4 +48,9 @@
     height: 30px;
     cursor: pointer;
     font-size: 1.2em;
+    margin: 10px 20px;
+}
+.lable {
+    padding: 5px 0px;
+
 }
