added date format to show page and userCardEvent

--- a/src/components/userEvents/createEvent/createEvent.css
+++ b/src/components/userEvents/createEvent/createEvent.css
@@ -16,7 +16,7 @@
     margin-bottom: 30px;
 }
 .CreateEventCard {
-    width: 1000px;
+    width: 1200px;
     margin: 10px 0 0 0;
     padding: 20px;
     display: flex;
@@ -69,13 +69,12 @@
     border-radius: 5px;
     background: rgb(248, 245, 253);
 }
-.btn-CreateEvent {
+.btn-CreateNewEvent {
     display: flex;
     width: 25%;
-    background: rgb(19, 0, 65); 
+    background: rgb(77, 55, 133); 
     /* background: rgb(166, 111, 255); */
-    color: white;
-    cursor: pointer;
+    color: black;
     justify-content: center;
     font-size: 1.5em;
 }
