--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -4,6 +4,18 @@
     font-family: 'Varela Round', sans-serif;
 }
 
+.logoTitleContainer {
+    display: flex;
+    align-items: center;
+    margin-left: 1.7%;
+}
+.logoBox {
+    width: 50px;
+    height: 50px;
+    background-size: cover;
+    background-position: center;
+    background-image: url('../../images/tekylogo.png');
+}
 .header {
     background-color: rgb(19, 0, 65);
     width: 100%;
@@ -27,6 +39,7 @@
     width: fit-content;
     text-align: center;
     border-radius: 3px;
+    font-size: 37px;
 }
 
 .navBar {
