--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -28,7 +28,7 @@
     /* background-image: url('../../images/stripesBackground3.jpg'); */
     background-size: cover;
     background-position: top left;
-    background-color: rgba(255, 255, 255, .95);
+    background-color: rgb(255, 255, 255);
 }
 .dbSkillBox {
     display: flex;
@@ -50,6 +50,7 @@
     padding: 20px 10px;
     /* background-color: rgba(255, 255, 255, .6); */
     border-radius: 3px;
+    font-size: 16px;
 }
 .dbEntries {
     width: 40%;
@@ -82,7 +83,7 @@
     margin: 20px 5px;
     box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .3), 0 2px 6px 2px rgba(60, 64, 67, .15);
     border-radius: 3px;
-    background-color: rgba(255, 255, 255, .9);
+    background-color: rgb(255, 255, 255);
 }
 .mapHolder {
     width: 100%;
