--- a/src/components/events/events.css
+++ b/src/components/events/events.css
@@ -1,19 +1,23 @@
 .AllPublicEventsContainer {
     width: 100%;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 70px 0;
 }
+
 .h1-AllEvents {
     font-size: 2.9em;
     margin-bottom: 10px;
     padding-bottom: 5px;
     border-bottom: 1px solid rgb(180, 180, 180);
 }
+
 .p-AllEvents {
     padding: 10px 300px;
     text-align: center;
     font-size: 1.1em;
 }
+
+.override-btw {}
