--- a/src/components/events/cardEvent/cardEvents.css
+++ b/src/components/events/cardEvent/cardEvents.css
@@ -12,6 +12,7 @@
     align-items: left;
     box-shadow: 0 1px 2px 0 rgba(60,64,67,.30), 0 2px 6px 2px rgba(60,64,67,.15);
     border-radius: 8px;
+    background: whitesmoke;
 }
 .CardEventInfo {
     display: flex;
