--- a/src/components/events/showEvent/showEvent.css
+++ b/src/components/events/showEvent/showEvent.css
@@ -4,9 +4,17 @@
     flex-direction: column; 
     justify-content: center;
     align-items: center;
-    margin: 70px 0;
+    /* margin: 70px 0; */
     /* background: yellow; */
     padding-bottom: 400px;
+    background-image: url('/images/stripesBackground.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+    padding: 50px 0;
+    min-height: 100vh;
+
 }
 /* .ShowEventContainer {
     width: 100%;
@@ -15,6 +23,7 @@
     background: red;
 } */
 .CardMainItem {
+    z-index: -1;
     width: 800px;
     /* height: 800px; */
     margin: 30px 0 0 0;
@@ -22,8 +31,9 @@
     display: flex;
     flex-direction: column;
     align-items: left;
-    box-shadow: 0 1px 2px 0 rgba(60,64,67,.30), 0 2px 6px 2px rgba(60,64,67,.15);
+    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .30), 0 2px 6px 2px rgba(60, 64, 67, .15);
     border-radius: 8px;
+    background-color: whitesmoke;
 }
 .CardItemTitle {
     margin: 5px 180px;
@@ -53,4 +63,7 @@
 .lable {
     padding: 5px 0px;
 
+}
+.LinkToAllEvents{
+    background: whitesmoke;
 }
